k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brewer
  labels:
    name: brewer
    app: brewer
    environment: production
