k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewer-app
  namespace: brewer
  labels:
    app: brewer
    component: application
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: brewer
    component: application
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
